tests/invalid/unsupported_statement_global/main.py
x: int = 0

def main() -> None:
    global x
    x = 1
